# aguara-observatory

./: .gitignore  LICENSE  Makefile  README.md  index.html  observatory.db  pyproject.toml  requirements.txt
.github/workflows/: aggregate.yml  crawl-clawhub.yml  crawl-mcp.yml  crawl-skills-sh.yml  daily-pipeline.yml  incremental-crawl.yml  publish.yml  purge-findings.yml  scan.yml
aggregator/: __init__.py  auditor.py  benchmark.py  benchmarks.py  export.py  fp_analysis.py  scores.py  stats.py  trends.py
benchmarks/: index.html
crawlers/: __init__.py  base.py  clawhub.py  db.py  glama.py  lobehub.py  mcp_registry.py  mcp_so.py  models.py  pulsemcp_scraper.py  resume_downloads.py  skills_sh.py  smithery.py  utils.py  vendor_audits.py
data/: scan-results-clawhub.json  scan-results-lobehub.json  scan-results-mcp-so.json  scan-results-skills-sh.json
datasets/: findings.csv  index.html  scores.csv  skills.csv
registries/: index.html
scanner/: __init__.py  ingest.py  run.py
schemas/: 001_initial.sql  002_indexes.sql  003_crawl_state.sql  004_crawl_runs.sql  005_purge_findings_history.sql  006_audit_overrides.sql  007_findings_dedup.sql  008_findings_extra_fields.sql
scripts/: compare_scans.py  fix_sitemap.py  generate_rules_kb.py  purge_findings_history.py  rules_remediation.json
tests/: conftest.py  test_benchmarks.py  test_crawl_state.py  test_db.py  test_incremental.py  test_ingest.py  test_models.py  test_utils.py  test_vendor_parsers.py
trends/: index.html
web/: astro.config.mjs  netlify.toml  package-lock.json  package.json  tailwind.config.mjs
(+925 files in other folders)
